# opencrispr-repro-main

./: README.md  config.yml  config_grna_modeling.yml  config_opencrispr.yml  generate.py  generate_config.yml  pyproject.toml  requirements.txt
data/: crispr_train_test.csv  crispr_val_test.csv
example_pipelines/: generate_pipeline.sh  generate_pipeline_rna.sh  train_pipeline.sh
scripts/: README.md  clean_generations.py  csv_to_fasta.py  foldseek.py  mmseq.py  requirements.txt  rna_validation.py
src/grna-modeling/: requirements.txt  setup.py
src/grna-modeling/grna_modeling/: __init__.py  runner.py  trainer.py
src/grna-modeling/grna_modeling/model/: gRNAModel.py  transformer.py
src/grna-modeling/grna_modeling/utility/: convert_vocab.py  esm.py  make_sgrna.py  tensor.py  vocabulary.py
src/grna-modeling/grna_modeling/utility/protein/: MacromoleculeBatch.py  __init__.py  vocabulary.py
src/grna_modeling/: runner.py  sample.py  score.py  trainer.py
src/grna_modeling/utility/: data_loaders.py  esm.py
src/grna_modeling/utility/protein/: Macromolecule.py  NucleicAcid.py  NucleicAcidBatch.py  Protein.py  ProteinBatch.py
src/opencrispr_repro/: checkpoint.py  configuration_progen2.py  data.py  generate.py  main.py  model.py  modeling_progen2.py  scheduler.py  schema.py  tokenizer_progen2.json  trainer.py
